[gd_scene load_steps=13 format=3 uid="uid://ope7e5mefw3t"]

[ext_resource type="PackedScene" uid="uid://bk3ens0hxj6yg" path="res://scenes/UI/ingame_hud.tscn" id="1_1fg8n"]
[ext_resource type="Environment" uid="uid://bb4vhnhw8xut3" path="res://scenes/environment.tres" id="1_2rxfy"]
[ext_resource type="PackedScene" uid="uid://dl0hs7ygbegqh" path="res://scenes/UI/pause_menu.tscn" id="1_g6mpy"]
[ext_resource type="Script" path="res://scenes/puzzles/tutorial/00_move_box.gd" id="1_g7tsy"]
[ext_resource type="PackedScene" uid="uid://bjaqy7nmvlb3t" path="res://evironment/blocks/floor_tile.tscn" id="2_ctxuf"]
[ext_resource type="PackedScene" uid="uid://bt16jtq300lur" path="res://player/player.tscn" id="3_tqoka"]
[ext_resource type="PackedScene" uid="uid://ijgj4cyrxngg" path="res://boxes/box.tscn" id="4_st6su"]
[ext_resource type="PackedScene" uid="uid://drvtot28bflg8" path="res://evironment/blocks/wall_tile.tscn" id="5_kynvc"]
[ext_resource type="PackedScene" uid="uid://cghd73ms2x6of" path="res://scenes/win_area.tscn" id="6_ta8at"]
[ext_resource type="PackedScene" uid="uid://cix5062h1dbcu" path="res://evironment/blocks/flowerpot.tscn" id="8_1jman"]
[ext_resource type="PackedScene" uid="uid://bbrk7fiapomt0" path="res://evironment/blocks/door_tile.tscn" id="10_byhkp"]
[ext_resource type="PackedScene" uid="uid://dbb5xcmpjj2x2" path="res://fps_cap.tscn" id="12_vrgbn"]

[node name="Tutorial00" type="Node3D"]
script = ExtResource("1_g7tsy")
next_level = "res://scenes/puzzles/tutorial/01_strong_link.tscn"

[node name="Tutorial" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Tutorial01" type="PanelContainer" parent="Tutorial"]
layout_mode = 0
offset_left = 57.0
offset_top = 54.0
offset_right = 352.0
offset_bottom = 156.0
theme_type_variation = &"PanelContainerBordered"

[node name="RichTextLabel" type="RichTextLabel" parent="Tutorial/Tutorial01"]
layout_mode = 2
bbcode_enabled = true
text = "Press [img=50]ui_textures/button_prompts/keyboard_mouse/F_Key_Dark.png[/img] to grab the box and move it into the marked area."

[node name="Tutorial02" type="PanelContainer" parent="Tutorial"]
layout_mode = 0
offset_left = 57.0
offset_top = 54.0
offset_right = 375.0
offset_bottom = 207.0
theme_type_variation = &"PanelContainerBordered"

[node name="RichTextLabel" type="RichTextLabel" parent="Tutorial/Tutorial02"]
layout_mode = 2
bbcode_enabled = true
text = "Use [img=50]res://ui_textures/button_prompts/keyboard_mouse/Mouse_Left_Key_Dark.png[/img] to link two boxes together with a [color=2adae8]weak link[/color]. Use [img=50]res://ui_textures/button_prompts/keyboard_mouse/Mouse_Middle_Key_Dark.png[/img] to switch between link types."

[node name="Tutorial03" type="PanelContainer" parent="Tutorial"]
layout_mode = 0
offset_left = 57.0
offset_top = 54.0
offset_right = 375.0
offset_bottom = 146.0
theme_type_variation = &"PanelContainerBordered"

[node name="RichTextLabel" type="RichTextLabel" parent="Tutorial/Tutorial03"]
layout_mode = 2
bbcode_enabled = true
text = "Use [img=50]res://ui_textures/button_prompts/keyboard_mouse/Mouse_Right_Key_Dark.png[/img] to cancel the active link."

[node name="Pause Menu" parent="." instance=ExtResource("1_g6mpy")]

[node name="UI" parent="." instance=ExtResource("1_1fg8n")]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("1_2rxfy")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 7, 0)
shadow_enabled = true

[node name="Map" type="Node3D" parent="."]

[node name="Floor" type="Node3D" parent="Map"]

[node name="floor_tile" parent="Map/Floor" instance=ExtResource("2_ctxuf")]

[node name="floor_tile2" parent="Map/Floor" instance=ExtResource("2_ctxuf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, 0)

[node name="floor_tile3" parent="Map/Floor" instance=ExtResource("2_ctxuf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, 3)

[node name="floor_tile4" parent="Map/Floor" instance=ExtResource("2_ctxuf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)

[node name="floor_tile5" parent="Map/Floor" instance=ExtResource("2_ctxuf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -6)

[node name="floor_tile6" parent="Map/Floor" instance=ExtResource("2_ctxuf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, -6)

[node name="floor_tile7" parent="Map/Floor" instance=ExtResource("2_ctxuf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, -3)

[node name="floor_tile8" parent="Map/Floor" instance=ExtResource("2_ctxuf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3)

[node name="floor_tile9" parent="Map/Floor" instance=ExtResource("2_ctxuf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, -6)

[node name="floor_tile10" parent="Map/Floor" instance=ExtResource("2_ctxuf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, -6)

[node name="floor_tile11" parent="Map/Floor" instance=ExtResource("2_ctxuf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, -3)

[node name="floor_tile12" parent="Map/Floor" instance=ExtResource("2_ctxuf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, -3)

[node name="floor_tile13" parent="Map/Floor" instance=ExtResource("2_ctxuf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 0, -6)

[node name="floor_tile14" parent="Map/Floor" instance=ExtResource("2_ctxuf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9, 0, -6)

[node name="floor_tile15" parent="Map/Floor" instance=ExtResource("2_ctxuf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9, 0, -3)

[node name="floor_tile16" parent="Map/Floor" instance=ExtResource("2_ctxuf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 0, -3)

[node name="floor_tile19" parent="Map/Floor" instance=ExtResource("2_ctxuf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9, -2, 3)

[node name="floor_tile23" parent="Map/Floor" instance=ExtResource("2_ctxuf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12, -2, 0)

[node name="floor_tile24" parent="Map/Floor" instance=ExtResource("2_ctxuf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9, -2, 0)

[node name="floor_tile25" parent="Map/Floor" instance=ExtResource("2_ctxuf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12, -2, 3)

[node name="floor_tile20" parent="Map/Floor" instance=ExtResource("2_ctxuf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9, -3, 12)

[node name="floor_tile33" parent="Map/Floor" instance=ExtResource("2_ctxuf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, -3, 12)

[node name="floor_tile30" parent="Map/Floor" instance=ExtResource("2_ctxuf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 0, 6)

[node name="floor_tile31" parent="Map/Floor" instance=ExtResource("2_ctxuf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9, 0, 6)

[node name="floor_tile34" parent="Map/Floor" instance=ExtResource("2_ctxuf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 0, 9)

[node name="floor_tile35" parent="Map/Floor" instance=ExtResource("2_ctxuf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9, 0, 9)

[node name="floor_tile37" parent="Map/Floor" instance=ExtResource("2_ctxuf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, 6)

[node name="floor_tile38" parent="Map/Floor" instance=ExtResource("2_ctxuf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, 9)

[node name="floor_tile32" parent="Map/Floor" instance=ExtResource("2_ctxuf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 12, -3, 12)

[node name="floor_tile21" parent="Map/Floor" instance=ExtResource("2_ctxuf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, 0)

[node name="floor_tile26" parent="Map/Floor" instance=ExtResource("2_ctxuf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, -3)

[node name="floor_tile27" parent="Map/Floor" instance=ExtResource("2_ctxuf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, -6)

[node name="floor_tile22" parent="Map/Floor" instance=ExtResource("2_ctxuf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, 3)

[node name="floor_tile28" parent="Map/Floor" instance=ExtResource("2_ctxuf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, 9)

[node name="floor_tile36" parent="Map/Floor" instance=ExtResource("2_ctxuf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, 6)

[node name="floor_tile29" parent="Map/Floor" instance=ExtResource("2_ctxuf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15, 0, 12)

[node name="Boxes" type="Node3D" parent="Map"]

[node name="Box" parent="Map/Boxes" instance=ExtResource("4_st6su")]
transform = Transform3D(0.965926, 0, -0.258819, 0, 1, 0, 0.258819, 0, 0.965926, 0, 0, -3)

[node name="Box2" parent="Map/Boxes" instance=ExtResource("4_st6su")]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 10, 0, -5)

[node name="Box3" parent="Map/Boxes" instance=ExtResource("4_st6su")]
transform = Transform3D(-0.258819, 0, -0.965926, 0, 1, 0, 0.965926, 0, -0.258819, 10, 0, 7.58097)

[node name="Walls" type="Node3D" parent="Map"]

[node name="wall_tile" parent="Map/Walls" instance=ExtResource("5_kynvc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, 3)

[node name="wall_tile9" parent="Map/Walls" instance=ExtResource("5_kynvc")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 3)

[node name="wall_tile10" parent="Map/Walls" instance=ExtResource("5_kynvc")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 3, 0, 3)

[node name="wall_tile11" parent="Map/Walls" instance=ExtResource("5_kynvc")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 3, 0, 0)

[node name="wall_tile12" parent="Map/Walls" instance=ExtResource("5_kynvc")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 3, 0, -3)

[node name="wall_tile13" parent="Map/Walls" instance=ExtResource("5_kynvc")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 6.001, -0.001, -3.001)

[node name="wall_tile14" parent="Map/Walls" instance=ExtResource("5_kynvc")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 9.001, -0.001, -3.001)

[node name="wall_tile15" parent="Map/Walls" instance=ExtResource("5_kynvc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9, 0, -3)

[node name="wall_tile2" parent="Map/Walls" instance=ExtResource("5_kynvc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, 0)

[node name="wall_tile24" parent="Map/Walls" instance=ExtResource("5_kynvc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9, 0, 3)

[node name="wall_tile26" parent="Map/Walls" instance=ExtResource("5_kynvc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9, -3, 3)

[node name="wall_tile36" parent="Map/Walls" instance=ExtResource("5_kynvc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9, -3, 0)

[node name="wall_tile39" parent="Map/Walls" instance=ExtResource("5_kynvc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, -3, 12)

[node name="wall_tile29" parent="Map/Walls" instance=ExtResource("5_kynvc")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 9, -3.001, -2.999)

[node name="wall_tile34" parent="Map/Walls" instance=ExtResource("5_kynvc")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 12, -3.001, -2.999)

[node name="wall_tile45" parent="Map/Walls" instance=ExtResource("5_kynvc")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 9, -3.001, 9.001)

[node name="wall_tile56" parent="Map/Walls" instance=ExtResource("5_kynvc")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 6, -3.001, 9.001)

[node name="wall_tile46" parent="Map/Walls" instance=ExtResource("5_kynvc")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 12, -3.001, 9.001)

[node name="wall_tile53" parent="Map/Walls" instance=ExtResource("5_kynvc")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 9, -0.000999928, 9.001)

[node name="wall_tile60" parent="Map/Walls" instance=ExtResource("5_kynvc")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 6, -0.000999928, 9.001)

[node name="wall_tile54" parent="Map/Walls" instance=ExtResource("5_kynvc")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 12, -0.000999928, 9.001)

[node name="wall_tile27" parent="Map/Walls" instance=ExtResource("5_kynvc")]
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 9, -3, 3)

[node name="wall_tile33" parent="Map/Walls" instance=ExtResource("5_kynvc")]
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 12, -3, 3)

[node name="wall_tile30" parent="Map/Walls" instance=ExtResource("5_kynvc")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 14.999, -3.001, 0)

[node name="wall_tile35" parent="Map/Walls" instance=ExtResource("5_kynvc")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 14.999, -3.001, -3)

[node name="wall_tile31" parent="Map/Walls" instance=ExtResource("5_kynvc")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 14.999, -3.001, 9)

[node name="wall_tile28" parent="Map/Walls" instance=ExtResource("5_kynvc")]
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 9, 0, 3)

[node name="wall_tile38" parent="Map/Walls" instance=ExtResource("5_kynvc")]
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 6, 0, 3)

[node name="wall_tile32" parent="Map/Walls" instance=ExtResource("5_kynvc")]
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 12, 0, 3)

[node name="wall_tile52" parent="Map/Walls" instance=ExtResource("5_kynvc")]
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 12, 0, 3)

[node name="wall_tile47" parent="Map/Walls" instance=ExtResource("5_kynvc")]
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 9, -3, 12)

[node name="wall_tile55" parent="Map/Walls" instance=ExtResource("5_kynvc")]
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 6, -3, 12)

[node name="wall_tile48" parent="Map/Walls" instance=ExtResource("5_kynvc")]
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 12, -3, 12)

[node name="wall_tile49" parent="Map/Walls" instance=ExtResource("5_kynvc")]
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 9, 0, 12)

[node name="wall_tile50" parent="Map/Walls" instance=ExtResource("5_kynvc")]
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 12, 0, 12)

[node name="wall_tile51" parent="Map/Walls" instance=ExtResource("5_kynvc")]
transform = Transform3D(1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 15, 0, 12)

[node name="wall_tile25" parent="Map/Walls" instance=ExtResource("5_kynvc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9, 0, 0)

[node name="wall_tile41" parent="Map/Walls" instance=ExtResource("5_kynvc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9, 0, 12)

[node name="wall_tile42" parent="Map/Walls" instance=ExtResource("5_kynvc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, 6)

[node name="wall_tile57" parent="Map/Walls" instance=ExtResource("5_kynvc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, 9)

[node name="wall_tile3" parent="Map/Walls" instance=ExtResource("5_kynvc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, -3)

[node name="wall_tile4" parent="Map/Walls" instance=ExtResource("5_kynvc")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, -6)

[node name="wall_tile5" parent="Map/Walls" instance=ExtResource("5_kynvc")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -3, 0, -9)

[node name="wall_tile6" parent="Map/Walls" instance=ExtResource("5_kynvc")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, -9)

[node name="wall_tile7" parent="Map/Walls" instance=ExtResource("5_kynvc")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 3, 0, -9)

[node name="wall_tile8" parent="Map/Walls" instance=ExtResource("5_kynvc")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 6, 0, -9)

[node name="wall_tile18" parent="Map/Walls" instance=ExtResource("5_kynvc")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 18, 0, -6)

[node name="wall_tile21" parent="Map/Walls" instance=ExtResource("5_kynvc")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 18, 0, -9)

[node name="wall_tile22" parent="Map/Walls" instance=ExtResource("5_kynvc")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 18, 0, 0)

[node name="wall_tile23" parent="Map/Walls" instance=ExtResource("5_kynvc")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 18, 0, -3)

[node name="wall_tile43" parent="Map/Walls" instance=ExtResource("5_kynvc")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 18, 0, 9)

[node name="wall_tile44" parent="Map/Walls" instance=ExtResource("5_kynvc")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 18, 0, 6)

[node name="wall_tile58" parent="Map/Walls" instance=ExtResource("5_kynvc")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 18, 0, 3)

[node name="wall_tile59" parent="Map/Walls" instance=ExtResource("5_kynvc")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 12, 0, 3)

[node name="wall_tile19" parent="Map/Walls" instance=ExtResource("5_kynvc")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 9, 0, -9)

[node name="wall_tile20" parent="Map/Walls" instance=ExtResource("5_kynvc")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 12, 0, -9)

[node name="wall_tile37" parent="Map/Walls" instance=ExtResource("5_kynvc")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 15, 0, -9)

[node name="Flowers" type="Node3D" parent="Map"]

[node name="flowerpot" parent="Map/Flowers" instance=ExtResource("8_1jman")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7, 0, 4)

[node name="flowerpot2" parent="Map/Flowers" instance=ExtResource("8_1jman")]
transform = Transform3D(0.258819, 0, 0.965926, 0, 1, 0, -0.965926, 0, 0.258819, 9, 0, 4)

[node name="flowerpot3" parent="Map/Flowers" instance=ExtResource("8_1jman")]
transform = Transform3D(0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 11, 0, 4)

[node name="flowerpot4" parent="Map/Flowers" instance=ExtResource("8_1jman")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13, 0, 4)

[node name="flowerpot5" parent="Map/Flowers" instance=ExtResource("8_1jman")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, -4)

[node name="flowerpot6" parent="Map/Flowers" instance=ExtResource("8_1jman")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5, 0, -4)

[node name="WinArea1" parent="Map" instance=ExtResource("6_ta8at")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 7.8, 0, -4)

[node name="WinArea2" parent="Map" instance=ExtResource("6_ta8at")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.8, -2, 1)

[node name="WinArea3" parent="Map" instance=ExtResource("6_ta8at")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.8, 0, 7)

[node name="WinArea4" parent="Map" instance=ExtResource("6_ta8at")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.8, -3, 10)

[node name="door" parent="Map" instance=ExtResource("10_byhkp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9, 0, -6)

[node name="door2" parent="Map" instance=ExtResource("10_byhkp")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 15, 0, 3)

[node name="door3" parent="Map" instance=ExtResource("10_byhkp")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 12, 0, 6)

[node name="door4" parent="Map" instance=ExtResource("10_byhkp")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9, -3, 12)

[node name="Player" parent="." instance=ExtResource("3_tqoka")]

[node name="FPSCap" parent="." instance=ExtResource("12_vrgbn")]

[connection signal="game_paused" from="Pause Menu" to="." method="_on_pause_menu_game_paused"]
[connection signal="game_unpaused" from="Pause Menu" to="." method="_on_pause_menu_game_unpaused"]
[connection signal="win_area_entered" from="Map/WinArea1" to="." method="_on_win_area_1_win_area_entered"]
[connection signal="win_area_entered" from="Map/WinArea1" to="Map/door" method="open_door"]
[connection signal="win_area_entered" from="Map/WinArea2" to="." method="_on_win_area_2_win_area_entered"]
[connection signal="win_area_entered" from="Map/WinArea2" to="Map/door2" method="open_door"]
[connection signal="win_area_entered" from="Map/WinArea2" to="Map/door3" method="open_door"]
[connection signal="win_area_entered" from="Map/WinArea3" to="Map/door3" method="close_door"]
[connection signal="win_area_entered" from="Map/WinArea3" to="Map/door4" method="open_door"]
[connection signal="win_area_entered" from="Map/WinArea4" to="." method="_on_win_area_4_win_area_entered"]
